# ovie

./: .gitignore  .gitlab-ci.yml  ANNOUNCEMENT.md  BUILD_STATUS.md  CODE_OF_CONDUCT.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_FIXES_SUMMARY_v2.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_READY.md  DEPLOYMENT_UPDATES.md  GITHUB_RELEASE_SUMMARY.md  LICENSE  MANUAL_RELEASE_CHECKLIST.md  MANUAL_RELEASE_v2.1.0.md  MIGRATION_GUIDE_v2.1_to_v2.2.md  Makefile  OFFLINE-FIRST.md  PROJECT_STRUCTURE.md  README.md  RELEASE-CHECKLIST.md  RELEASE_NOTES_v2.2.md  SECURITY.md  SELF_HOSTING_ACHIEVEMENT.md  SPEC.md  STAGE2-DEPLOYMENT-SUMMARY.md  VERSION_UPDATE_SUMMARY.md  benchmark_performance.rs  build-binaries.ps1  build-releases.ps1  create-demo-release.sh  deploy-ovie-stage2.ps1  deploy-ovie-stage2.sh  deploy-website.ps1  deploy-website.sh  easy-linux-install.sh  easy-macos-install.sh  easy-windows-install.bat  easy-windows-install.ps1  fix_regression_detector.txt  (+26 more)
.github/workflows/: bootstrap-verification.yml  build-all-platforms.yml  create-release.yml  main.yml  manual-release.yml  release.yml  test-extension.yml  unified-release.yml
.ovie/: aproko.toml
aproko/: .gitignore  Cargo.toml
aproko/src/: diagnostic.rs  diagnostic_tests.rs  explanation.rs  integration_tests.rs  lib.rs  property_tests.rs  reasoning.rs  reasoning_tests.rs
aproko/src/analyzers/: correctness.rs  logic.rs  mod.rs  performance.rs  security.rs  style.rs  syntax.rs
docs/: README.md  compiler_invariants.md  getting-started.md  installation.md  language-guide.md
examples/: README.md  ai_training_data.ov  bank_account.ov  calculator.ov  control_flow.ov  data_processing.ov  enums.ov  functions.ov  hello.ov  memory_safety.ov  struct.ov  testing.ov
extensions/ovie-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
linux-x64/: install.sh  ovie  oviec
linux-x64/docs/: ai-integration.md  aproko.md  cli.md  installation.md
linux-x64/examples/: employee_management.ov  lexer_demo.ov  llm_friendly.ov  natural_language.ov  parser_demo.ov  variables.ov
macos-arm64/: README.md  ovie  oviec
macos-arm64/docs/: engineering-overview.md  installation.md
macos-x64/: ovie  oviec
ovie/: .gitignore  Cargo.toml
ovie/src/: main.rs  tests.rs
oviec/: .gitignore  Cargo.toml  TESTING_FRAMEWORK.md
oviec/src/: ast.rs  cross_target_validation.rs  error.rs  hardware.rs  hardware_impl.rs  hardware_safety.rs  hir.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  mir.rs  normalizer.rs  package.rs  parser.rs  runtime_environment.rs  security.rs  tests_framework.rs
oviec/src/branding/: mod.rs
oviec/src/codegen/: llvm.rs  mod.rs  wasm.rs
oviec/src/release/: builder.rs  distribution.rs  installer.rs  mod.rs  signing.rs  verification.rs
oviec/src/self_hosting/: BOOTSTRAP_INFRASTRUCTURE_COMPLETE.md  BOOTSTRAP_STARTUP_PLAN.md  IMPLEMENTATION_STATUS.md  PARSER_BUG_REPORT.md  README.md  TASKS_7_1_3_AND_7_1_4_COMPLETION_REPORT.md  TASK_7_1_2_COMPLETION_REPORT.md  TASK_7_2_COMPLETION_REPORT.md  TASK_8_2_COMPLETION_REPORT.md  TASK_8_2_FINAL_SUMMARY.md  TASK_8_2_PREPARATION.md  UPDATED_DEMONSTRATIONS_SUMMARY.md  bootstrap_compiler.ov  bootstrap_compiler_real.ov  bootstrap_compiler_simple.ov  bootstrap_integration.rs  bootstrap_requirements.md  bootstrap_verification.rs  codegen_minimal.ov  codegen_simple.ov  codegen_updated.ov  compiler_integrated.ov  compiler_proof_of_concept.ov  demo_updated_types.ov  full_compiler_working.ov  integration_plan.md  lexer_complete.ov  lexer_functional.ov  lexer_minimal.ov  lexer_spec.ov  lexer_working.ov  minimal_compiler.ov  minimal_compiler_spec.md  mod.rs  parser_bug_minimal.ov  parser_bug_test.ov  parser_complete.ov  parser_minimal.ov  parser_minimal_fixed.ov  parser_simple.ov  (+29 more)
oviec/src/stdlib/: cli.rs  core.rs  env.rs  fs.rs  io.rs  log.rs  math.rs  mod.rs  test.rs  time.rs
oviec/src/tests/: grammar_validation_tests.rs  hir_tests.rs  mir_tests.rs  mod.rs  offline_first_tests.rs  property_tests.rs  stdlib_integration_tests.rs
oviec/tests/: TEST_ORGANIZATION.md  bootstrap_verification_tests.rs  ci_integration_tests.rs  cli_behavior_tests.rs  cross_platform_system_tests.rs  distribution_builder_tests.rs  documentation_tests.rs  installation_tests.rs  mod.rs  performance_stability_tests.rs  runner.rs  self_hosting_validation.rs  simple_test.rs  stdlib_api_verification.rs  stdlib_cli_tests.rs  stdlib_completeness_verification.rs  stdlib_core_tests.rs  stdlib_cross_platform_tests.rs  stdlib_determinism_tests.rs  stdlib_documentation_verification.rs  stdlib_env_tests.rs  stdlib_fs_tests.rs  stdlib_integration_suite.rs  stdlib_log_tests.rs  stdlib_math_tests.rs  stdlib_performance_tests.rs  stdlib_placeholder_detection.rs  stdlib_property_tests.rs  stdlib_test_tests.rs  stdlib_time_tests.rs  stdlib_type_checking_verification.rs  system_integration_tests.rs  utils.rs
oviec/tests/bootstrap/: TASK_8_2_5_COMPLETION.md  comprehensive_tests.rs  mod.rs  script_integration_tests.rs
oviec/tests/conformance/: abi_spec.rs  language_spec.rs  mod.rs  stdlib_spec.rs
oviec/tests/distribution/: installer.rs  mod.rs  package_builder.rs  release_manager.rs
oviec/tests/integration/: cross_platform.rs  cross_platform_validator.rs  end_to_end.rs  invariant_pipeline.rs  mod.rs  performance.rs
oviec/tests/performance/: benchmarks.rs  mod.rs  regression.rs
oviec/tests/property/: bootstrap.rs  compiler.rs  mod.rs  security.rs  stdlib.rs
oviec/tests/regression/: compiler_behavior.rs  mod.rs  performance_regression.rs  regression_detector.rs
oviec/tests/unit/: ast_invariants.rs  backend_invariants.rs  codegen.rs  hir_invariants.rs  lexer.rs  mir_invariants.rs  mod.rs  parser.rs  runtime.rs  simple_ast_invariants.rs  type_checker.rs
scripts/: bootstrap_verify.ps1  bootstrap_verify.sh  verify_stdlib_completeness.rs
spec/: error-model.md  grammar.ebnf  grammar.md  memory-model.md  type-system.md
std/core/: mod.ov
website/: index.html  robots.txt  sitemap.xml
windows-x64/: README.md  install.bat  ovie.bat  oviec.bat
(+50 files in other folders)
