[workspace]
members = ["oviec", "ovie", "aproko"]
resolver = "2"

[workspace.package]
version = "2.1.0"
edition = "2021"
license = "MIT"
authors = ["Ovie Language Team <team@ovie-lang.org>"]
repository = "https://github.com/southwarridev/ovie"
homepage = "https://ovie-lang.org"
documentation = "https://docs.ovie-lang.org"

[workspace.dependencies]
# Lexer and parsing
logos = "0.14"
# Error handling
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Cryptography and hashing
sha2 = "0.10"
# File system utilities
dirs = "5.0"
# Date and time
chrono = { version = "0.4", features = ["serde"] }
# Testing utilities
tempfile = "3.0"
# TOML parsing
toml = "0.8"
# Property-based testing
proptest = "1.0"
# Additional testing utilities
quickcheck = "1.0"
# WASM generation
wasm-encoder = "0.38"
wasmparser = "0.118"
# LLVM backend (optional)
inkwell = { version = "0.4", features = ["llvm17-0"] }