[package]
name = "oviec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Ovie v2.2.0 compiler - Low-level self-hosted programming language compiler with formal invariants, AST→HIR→MIR pipeline, and bootstrap verification"
keywords = ["compiler", "programming-language", "ovie", "low-level", "self-hosted", "formal-verification"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "oviec"
path = "src/main.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[dependencies]
# Lexer and parsing
logos.workspace = true
# Error handling
thiserror.workspace = true
miette.workspace = true
# Serialization
serde.workspace = true
serde_json.workspace = true
# WASM generation
wasm-encoder.workspace = true
wasmparser.workspace = true
# LLVM backend (optional)
inkwell = { workspace = true, optional = true }
# CLI argument parsing
clap.workspace = true
# Async runtime
tokio.workspace = true
# Package management
sha2.workspace = true
dirs.workspace = true
chrono.workspace = true
toml.workspace = true
# Environment module dependencies
hostname.workspace = true
whoami.workspace = true
# Archive creation
zip.workspace = true
tar.workspace = true
flate2.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[features]
default = []
llvm = ["inkwell"]

[dev-dependencies]
# Property-based testing
proptest.workspace = true
# Additional testing utilities
quickcheck.workspace = true
# Temporary directories for testing
tempfile.workspace = true
